--- a/.github/workflows/forge.yml
+++ b/.github/workflows/forge.yml
@@ -14,5 +14,7 @@ jobs:
           node-version: 16
       - name: install dependencies
         run: yarn install
-      - name: build
-        run: yarn make
+      - name: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn publish
